<resources>
    <string name="app_name">CustomerApp</string>
    <string name="registration_name">Name:</string>
    <string name="registration_NIF">NIF:</string>
    <string name="registration_credit_card_indication">Credit card data:</string>
    <string name="registration_credit_card_type">Type:</string>
    <string name="registration_credit_card_number">Number:</string>
    <string name="registration_credit_card_validity">Validity:</string>
    <string name="register_string">REGISTER</string>
    <string name="checkout_button">Checkout</string>
    <string name="performance_name">Performance name</string>
    <string name="performance_date">Date</string>
    <string name="performance_price">Price</string>
    <string name="performance_tickets_quantity">Qty:</string>
    <string name="buy_string">BUY</string>
    <string name="list_transactions_ticket_name">Tickets</string>
    <string name="list_transactions_ticket_date">Date</string>
    <string name="list_transactions_ticket_place">Place</string>
    <string name="ticketName">name</string>
    <string name="ticketDate">date</string>
    <string name="ticketPrice">price</string>
    <string name="list_transactions_voucher">Product Code of Vouchers </string>
    <string name="voucher">Voucher</string>
    <string name="list_transactions_product_name">Products</string>
    <string name="list_transactions_product_price">Price</string>
    <string name="list_transactions_product_quantity">Quantity</string>
    <string name="productName">Product</string>
    <string name="productPrice">Price</string>
    <string name="productQuantity">Quantity</string>
    <string name="zero_value">0</string>
    <string name="qr_code_image_view_description">QR code image</string>
    <string name="qr_code_tv_message">Please, show the QR code to the validator:</string>
    <string name="checkout_total_price_string">Total price: </string>
    <string name="checkout_total_price_example_string">€0</string>
    <string name="finish_string">FINISH</string>
    <string name="select_tickets_show_name">Show name</string>
    <string name="select_tickets_show_date">Show date</string>
    <string name="select_tickets_room_place">Room place</string>
    <string name="select_tickets_room_place_msg">Room place: </string>
    <string name="main_activity_title">Dashboard</string>
    <string name="select_tickets_activity_title">Select tickets</string>
    <string name="list_transactions_activity_title">Transactions</string>
    <string name="product_name">Name</string>
    <string name="product_price">Price</string>
    <string name="product_quantity">Qty: </string>
    <string name="title_activity_vouchers">VouchersActivity</string>
    <string name="select_products_activity_title">Select products</string>
    <string name="add_vouchers_product_code">Product code</string>
    <string name="add_vouchers_voucher_state">State</string>
    <string name="continue_string">CONTINUE</string>
    <string name="toolbar_button_string">BUTTON</string>
</resources>
