<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/selectTicketsShowName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/select_tickets_show_name"
            android:textStyle="bold" />

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/selectTicketsShowDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/select_tickets_show_date" />

        <TextView
            android:id="@+id/selectTicketsRoomPlaceMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/select_tickets_room_place_msg"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/selectTicketsRoomPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/select_tickets_room_place" />

        <CheckBox
            android:id="@+id/selectTicketsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

</LinearLayout>
